--- a/OrdemServico/nbproject/project.properties
+++ b/OrdemServico/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/OrdemServico
 excludes=
+file.reference.mysql-connector-java-8.0.28.jar=C:\\Users\\Isac Caldas\\OneDrive\\Isac\\\u00c1rea de Trabalho\\mysql-connector-java-8.0.28\\mysql-connector-java-8.0.28.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.28.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
